adaptive-block-diff/slurm/logs/adb_train_184295_0.err
Traceback (most recent call last):
  File "/ext3/miniconda3/envs/blockdiff/lib/python3.10/runpy.py", line 187, in _run_module_as_main
    mod_name, mod_spec, code = _get_module_details(mod_name, _Error)
  File "/ext3/miniconda3/envs/blockdiff/lib/python3.10/runpy.py", line 157, in _get_module_details
    code = loader.get_code(mod_name)
  File "<frozen importlib._bootstrap_external>", line 1017, in get_code
  File "<frozen importlib._bootstrap_external>", line 947, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/scratch/ug2084/Efficient-AI/adaptive-block-diff/src/predictor/train.py", line 111
    n_classes: int,
    ^^^^^^^^^^^^^^
SyntaxError: non-default argument follows default argument
